edited templates bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -286,7 +286,7 @@
                     <div class="col-lg-2 col-sm-6">
                         <h5>شرکت</h5>
                         <ul class="footer-address-list link-hover">
-                            <li><a href="get-quote.html">تماس</a></li>
+                            <li><a href="{% url 'about' %}">تماس</a></li>
                             <li><a href="javascript:void(0)">سوالات متداول</a></li>
                             <li><a href="javascript:void(0)">سیاست بازپرداخت</a></li>
                             <li><a href="javascript:void(0)">حریم خصوصی</a></li>
@@ -303,7 +303,8 @@
                             <div class="content">
                                 <p class="post-meta"><span class="post-date"><i class="far fa-clock"></i>دوم دی
                                         1400</span></p>
-                                <h4 class="title"><a href="{% static 'blog-sngle' %}">ما بهترین خدمات مشاوره خلاق را به شما ارائه
+                                <h4 class="title"><a href="{% static 'blog-sngle' %}">ما بهترین خدمات مشاوره خلاق را به
+                                        شما ارائه
                                         می دهیم </a></h4>
                             </div>
                         </div>
@@ -314,7 +315,8 @@
                             <div class="content">
                                 <p class="post-meta"><span class="post-date"><i class="far fa-clock"></i>دوم دی
                                         1400</span></p>
-                                <h4 class="title"><a href="{% static 'blog-sngle' %}">ما بهترین خدمات مشاوره خلاق را به شما ارائه
+                                <h4 class="title"><a href="{% static 'blog-sngle' %}">ما بهترین خدمات مشاوره خلاق را به
+                                        شما ارائه
                                         می دهیم </a></h4>
                             </div>
                         </div>
@@ -358,8 +360,8 @@
                                 <a href="javascript:void(0)" target="blank"><i class="fab fa-behance"></i></a>
                             </div>
                             <div class="footer-">
-                                <p>کپی رایت &copy; 1400 . تمامی حقوق محفوظ است. ترجمه و راست چینی توسط <a
-                                        href="https://www.mellatweb.com/" target="blank">ملت وب</a></p>
+                                <p>کپی رایت &copy; 1401 تمامی حقوق محفوظ است. <a href="https://www.google.ocm.com/"
+                                        target="blank"> نیواکس </a></p>
                             </div>
                         </div>
                     </div>
