--- a/templates/blog_pages/about.html
+++ b/templates/blog_pages/about.html
@@ -1,118 +1,125 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <!--Breadcrumb Area-->
-  <section class="breadcrumb-area banner-1" data-background="{% static 'images/banner/9.jpg' %}">
-    <div class="text-block">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 v-center">
-            <div class="bread-inner">
-              <div class="bread-menu">
-                <ul>
-                  <li><a href="index.html">خانه</a></li>
-                  <li><a href="#">درباره من</a></li>
-                </ul>
-              </div>
-              <div class="bread-title">
-                <h2>درباره شرکت</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--End Breadcrumb Area-->
-  <!--Start About-->
-  <section class="about-agency pad-tb block-1">
+<!--Breadcrumb Area-->
+<section class="breadcrumb-area banner-1" data-background="{% static 'images/banner/9.jpg' %}">
+  <div class="text-block">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 v-center">
-          <div class="about-image">
-            <img src="{% static 'images/about/company-about.png' %}" alt="about us" class="img-fluid"/>
+        <div class="col-lg-12 v-center">
+          <div class="bread-inner">
+            <div class="bread-menu">
+              <ul>
+                <li><a href="index.html">خانه</a></li>
+                <li><a href="#">درباره من</a></li>
+              </ul>
+            </div>
+            <div class="bread-title">
+              <h2>درباره شرکت</h2>
+            </div>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div class="common-heading text-l ">
-            <span>درباره ما</span>
-            <h2>درباره آژانس</h2>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.  </p>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.  </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!--End Breadcrumb Area-->
+<!--Start About-->
+<section class="about-agency pad-tb block-1">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 v-center">
+        <div class="about-image">
+          <img src="{% static 'images/about/company-about.png' %}" alt="about us" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="common-heading text-l ">
+          <span>درباره ما</span>
+          <h2>درباره آژانس</h2>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
+            با هدف بهبود ابزارهای کاربردی می باشد. </p>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+            بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع
+            با هدف بهبود ابزارهای کاربردی می باشد. </p>
+        </div>
+        <div class="row in-stats small about-statistics">
+          <div class="col-lg-4 col-sm-4">
+            <div class="statistics">
+              <div class="statnumb counter-number">
+                <span class="counter">450</span>
+                <p>مشتری راضی</p>
+              </div>
+            </div>
           </div>
-          <div class="row in-stats small about-statistics">
-            <div class="col-lg-4 col-sm-4">
-              <div class="statistics">
-                <div class="statnumb counter-number">
-                  <span class="counter">450</span>
-                  <p>مشتری راضی</p>
-                </div>
+          <div class="col-lg-4 col-sm-4">
+            <div class="statistics">
+              <div class="statnumb">
+                <span class="counter">95</span><span>k</span>
+                <p>ساعت کار</p>
               </div>
             </div>
-            <div class="col-lg-4 col-sm-4">
-              <div class="statistics">
-                <div class="statnumb">
-                  <span class="counter">95</span><span>k</span>
-                  <p>ساعت کار</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-4">
-              <div class="statistics mb0">
-                <div class="statnumb counter-number">
-                  <span class="counter">850</span>
-                  <p>پروژه انجام شده</p>
-                </div>
+          </div>
+          <div class="col-lg-4 col-sm-4">
+            <div class="statistics mb0">
+              <div class="statnumb counter-number">
+                <span class="counter">850</span>
+                <p>پروژه انجام شده</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!--End About-->
-  <!--Start why-choose-->
-  <section class="why-choose pad-tb">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6">
-          <div class="common-heading">
-            <span>ما عالی هستیم</span>
-            <h2 class="mb30">چرا ما</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row upset">
-        <div class="col-lg-3 col-sm-6 mt30">
-          <div class="s-block up-hor">
-            <div class="s-card-icon"><img src="{% static 'images/icons/research.svg" alt="service" class="img-fluid"/></div>
-            <h4>تحقیق و تحلیل</h4>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mt30">
-          <div class="s-block up-hor">
-            <div class="s-card-icon"><img src="{% static 'images/icons/chat.svg" alt="service" class="img-fluid"/></div>
-            <h4>مذاکره و قدرت</h4>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mt30">
-          <div class="s-block up-hor">
-            <div class="s-card-icon"><img src="{% static 'images/icons/monitor.svg" alt="service" class="img-fluid"/></div>
-            <h4>راه حل های خلاقانه و نوآورانه</h4>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 mt30">
-          <div class="s-block up-hor">
-            <div class="s-card-icon"><img src="{% static 'images/icons/trasparency.svg" alt="service" class="img-fluid"/></div>
-            <h4>شفافیت و سهولت کار</h4>
-            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
-          </div>
+  </div>
+</section>
+<!--End About-->
+<!--Start why-choose-->
+<section class="why-choose pad-tb">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+        <div class="common-heading">
+          <span>ما عالی هستیم</span>
+          <h2 class="mb30">چرا ما</h2>
         </div>
       </div>
     </div>
-  </section>
-  <!--End why-choose-->
-  {% endblock %}
+    <div class="row upset">
+      <div class="col-lg-3 col-sm-6 mt30">
+        <div class="s-block up-hor">
+          <div class="s-card-icon"><img src="{% static 'images/icons/research.svg" alt="service" class="img-fluid" />
+          </div>
+          <h4>تحقیق و تحلیل</h4>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mt30">
+        <div class="s-block up-hor">
+          <div class="s-card-icon"><img src="{% static 'images/icons/chat.svg" alt="service" class="img-fluid" /></div>
+          <h4>مذاکره و قدرت</h4>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mt30">
+        <div class="s-block up-hor">
+          <div class="s-card-icon"><img src="{% static 'images/icons/monitor.svg" alt="service" class="img-fluid" />
+          </div>
+          <h4>راه حل های خلاقانه و نوآورانه</h4>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 mt30">
+        <div class="s-block up-hor">
+          <div class="s-card-icon"><img src="{% static 'images/icons/trasparency.svg" alt="service" class="img-fluid" />
+          </div>
+          <h4>شفافیت و سهولت کار</h4>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. .</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--End why-choose-->
+{% endblock %}
