--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -10,12 +10,13 @@
 					<div class="bread-inner">
 						<div class="bread-menu">
 							<ul>
-								<li><a href="index.html">خانه</a></li>
-								<li><a href="#">وبلاگ گرید دو</a></li>
+								<!-- خانه  -->
+								<li><a href="index.html"> </a></li>
+								<li><a href="#"> نیواکس، اخبار تکنلوژی در یک نگاه </a></li>
 							</ul>
 						</div>
 						<div class="bread-title">
-							<h2>وبلاگ گرید دو</h2>
+							<h2> خوش آمدید♥ </h2>
 						</div>
 					</div>
 				</div>
