--- a/templates/blog_pages/error.html
+++ b/templates/blog_pages/error.html
@@ -3,23 +3,23 @@
 {% block content %}
 <!--Start 404 Error-->
 <section class="error bg-gradient pad-tb">
-<div class="container">
-<div class="row">
-<div class="col-md-12 text-center mt50 mb50">
-<div class="layer-div">
-<div class="error-block">
-<h1>صفحه یافت نشد</h1>
-<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
-<div class="images mt20">
-<img src="images/shape/error-page.png" alt="error page" class="img-fluid"/>
-</div>
-<a href="./" class="btn-outline">بازگشت به خانه</a>
-</div>
-</div>
-</div>
-</div>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center mt50 mb50">
+                <div class="layer-div">
+                    <div class="error-block">
+                        <h1>صفحه یافت نشد</h1>
+                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                        </p>
+                        <div class="images mt20">
+                            <img src="images/shape/error-page.png" alt="error page" class="img-fluid" />
+                        </div>
+                        <a href="./" class="btn-outline">بازگشت به خانه</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <!--End 404 Error-->
-
 {% endblock %}
