added static home page blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <header class="nav-bg-w main-header navfix fixed-top menu-white">
         <div class="container-fluid m-pad">
             <div class="menu-header">
-                <div class="dsk-logo"><a class="nav-brand" href="{% url 'blog-home' %}"">
+                <div class="dsk-logo"><a class="nav-brand" href="{% url 'blog-home' %}">
                         <img src=" {% static 'images/white-logo.png' %}" alt="Logo" class="mega-white-logo" />
                     <img src="{% static 'images/logo.png' %}" alt="Logo" class="mega-darks-logo" />
                     </a>
@@ -48,6 +48,7 @@
                                                 <!-- menu item -->
                                                 <li><a href="{% url 'blog-home' %}">خانه</a> </li>
                                                 <li><a href="{% url 'about' %}"> درباره ما </a> </li>
+                                                <li><a href="{% url 'blog_home_static' %}"> صفحه استاتیک </a> </li>
 
                                             </ul>
                                         </div>
