added test html file for url  parameter test

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
                                                 <li><a href="{% url 'blog-home' %}">خانه</a> </li>
                                                 <li><a href="{% url 'about' %}"> درباره ما </a> </li>
                                                 <li><a href="{% url 'blog_home_static' %}"> صفحه استاتیک </a> </li>
+                                                <li><a href="{% url 'test-' %}">صفحه تست آدرس</a> </li>
 
                                             </ul>
                                         </div>
