solve bug When not run

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,6 @@
                                                 <li><a href="{% url 'blog:blog-home' %}">خانه</a> </li>
                                                 <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                                                 <li><a href="{% url 'blog:blog_home_static' %}"> صفحه استاتیک </a> </li>
-                                                <li><a href="{% url 'blog:test' pid=1 nameurls=aa %}">صفحه تست آدرس</a> </li>
 
                                             </ul>
                                         </div>
@@ -66,7 +65,7 @@
                                             <ul>
                                                 <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                                                 <li><a href="{% url 'blog:error' %}"> صفحه خطا </a> </li>
-                                                <li><a href="{% url 'blog:blog_single' %}"> صفحه تک پست </a> </li>
+                                                <li><a href="#"> صفحه تک پست </a> </li>
 
                                             </ul>
                                         </div>
@@ -132,7 +131,7 @@
                                     <li><a href="{% url 'blog:blog-home' %}">خانه</a></li>
                                     <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                                     <li><a href="{% url 'blog:error' %}"> صفحه خطا </a> </li>
-                                    <li><a href="{% url 'blog:blog_single' %}"> صفحه تک پست </a> </li>
+                                    <li><a href="#"> صفحه تک پست </a> </li>
                                 </ul>
                             </li>
                             <li>
@@ -140,7 +139,7 @@
                                 <ul>
                                     <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                                     <li><a href="{% url 'blog:error' %}"> صفحه خطا </a> </li>
-                                    <li><a href="{% url 'blog:blog_single' %}"> صفحه تک پست </a> </li>
+                                    <li><a href="#"> صفحه تک پست </a> </li>
                                 </ul>
                             </li>
                         </ul>
@@ -151,7 +150,7 @@
 
                             <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                             <li><a href="{% url 'blog:error' %}"> صفحه خطا </a> </li>
-                            <li><a href="{% url 'blog:blog_single' %}"> صفحه تک پست </a> </li>
+                            <li><a href=""> صفحه تک پست </a> </li>
 
                         </ul>
                     </li>
