--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -40,7 +40,7 @@
 						<a href="#"><img src="{% static 'images/blog/blog-dg-1.jpg' %}" alt="girl"
 								class="img-fluid"></a>
 						<div class="entry-blog-post dg-bg2">
-							<span class="bypost-"><a href="#"><i class="fas fa-tag"></i> {{post.category}} </a></span>
+							<span class="bypost-"><a href="###"><i class="fas fa-tag"></i> {{post.category}} </a></span>
 							<span class="posted-on-">
 								<a href="#"><i class="fas fa-clock"></i> {{post.published_date.date}}</a>
 							</span>
