Edit and added Url link in post list
sent id as a parameters

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                                             <ul>
                                                 <li><a href="{% url 'blog:about' %}"> درباره ما </a> </li>
                                                 <li><a href="{% url 'blog:error' %}"> صفحه خطا </a> </li>
-                                                <li><a href="#"> صفحه تک پست </a> </li>
+                                                <li><a href="{% url 'blog:blog_single' pid=1 %}"> صفحه تک پست </a> </li>
 
                                             </ul>
                                         </div>
